tests/black_test/program/Error/test_NameError.tree
# 测试变量未定义错误
# 输出：NameErrorError
print(u)
